Cosmetics and code streamlining.
Change-Id: I2c5479f4259cafe5d98cb203f3af2d4aac62cfbe